--- a/assets/css/product-styles.css
+++ b/assets/css/product-styles.css
@@ -1,3 +1,14 @@
+#breadcrumbs {
+  margin-bottom: 50px;
+}
+
+.breadcrumbs-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 15px;
+}
+
 .breadcrumb-item {
   color: rgba(0, 47, 52, 0.64);
   font-size: 14px;
@@ -8,16 +19,13 @@
   color: #002f34;
 }
 
-#breadcrumbs {
-  margin-bottom: 50px;
-}
-
 .images-container {
   border: 1px solid rgba(0, 47, 52, 0.36);
   border-radius: 4px;
   overflow: hidden;
   padding: 0;
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 10px;
 }
 
 .featured-container {
@@ -45,6 +53,7 @@
   justify-content: center;
   background-color: black;
   position: relative;
+  margin-bottom: 20px;
 }
 
 .big-img {
@@ -53,14 +62,9 @@
   height: 30em;
 }
 
-.more-images {
-  height: 6em;
-}
-
 .more-images-container {
-  height: 100%;
-  display: flex;
   margin-left: 10px;
+  margin-bottom: 20px;
 }
 
 .small-image {
@@ -103,7 +107,8 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  padding: 15px 13px 0px 13px;
+  padding: 15px;
+  margin-bottom: 10px;
 }
 
 .product-price-container {
@@ -123,10 +128,11 @@
 
 .product-heading {
   color: rgba(0, 47, 52, 0.64);
+  margin-bottom: 20px;
 }
 
 .item-post-container {
-  margin-top: 5px;
+  margin-bottom: -25px;
   display: flex;
   justify-content: space-between;
   font-size: 12px;
@@ -144,6 +150,7 @@
   justify-content: space-between;
   color: #002f34;
   cursor: pointer;
+  margin-bottom: 10px;
 }
 
 .member-since-text {
@@ -157,15 +164,14 @@
   align-items: center;
   border: none;
   background-color: #002f34;
-  padding: 10px 10px;
-  margin-top: 10px;
+  padding: 10px;
+  margin-bottom: 25px;
 }
 
 .contact-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 25px;
   margin-bottom: 10px;
 }
 
@@ -183,13 +189,21 @@
   cursor: pointer;
 }
 
+.map-location-text {
+  display: flex;
+  justify-content: space-between;
+  font-size: 12px;
+  color: rgba(0, 47, 52, 0.64);
+  margin-bottom: 10px;
+}
+
 .map-container {
-  border-radius: 0.5rem;
-  margin-top: 10px;
+  border-radius: 4px;
   box-shadow: 0 0.2rem 0.2rem 0 rgb(0 0 0 / 15%);
   width: 100%;
   margin-bottom: 20px;
 }
+
 .map {
   width: 100%;
 }
@@ -207,7 +221,6 @@
   display: flex;
   justify-content: space-between;
   font-weight: 700;
-  margin-top: 7px;
 }
 
 .ad-id {
@@ -223,30 +236,30 @@
   border: 1px solid rgba(0, 47, 52, 0.36);
   border-radius: 4px;
   overflow: hidden;
-  margin-top: 10px;
   margin-bottom: 10px;
-  padding: 20px 15px 20px 15px;
+  padding: 20px;
 }
 
 .product-details {
   display: flex;
   justify-content: space-between;
-  padding: 0px 150px 25px 0px;
   border-bottom: 1px solid rgba(0, 47, 52, 0.2);
+  margin-bottom: 20px;
 }
 
 .product-keys {
+  padding: 25px;
   color: rgba(0, 47, 52, 0.64);
   font-size: 14px;
 }
 
 .product-values {
+  padding: 25px;
   font-size: 14px;
 }
 
 .description-heading {
   font-weight: bold;
-  margin-top: 20px;
 }
 
 .description {
