--- a/assets/css/search-styles.css
+++ b/assets/css/search-styles.css
@@ -153,17 +153,17 @@
   color: #002f34;
 }
 
-.list-card-container {
+.list-card {
   display: flex;
   border: 0.1rem solid rgba(0, 47, 52, 0.2);
   border-radius: 4px;
-  margin: 10px 0px 20px 0px;
+  margin: 10px;
   position: relative;
 }
 
 .list-img-container {
   width: 30%;
-  padding: 0.8rem;
+  padding: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
